Update unit tests to 1.17, fix packet lookups